content/sensu-go/5.16/reference/apikeys.md
---
title: "API Keys"
description: "API keys are long-lived authentication tokens generated by the Sensu backend. You can provide API keys to applications that want to interact with the Sensu API. Read this reference doc to learn about API keys."
weight: 30
version: "5.16"
product: "Sensu Go"
menu: 
  sensu-go-5.16:
    parent: reference
---

- [Authorization header format](#authorization-header-format)
- [API key resource structure](#api-key-resource-structure)
- [API key specification](#api-key-specification)
  - [Top-level attributes](#top-level-attributes) | [Metadata attributes](#metadata-attributes) | [Spec attributes](#spec-attributes)
- [Examples](#examples)

API keys are long-lived authentication tokens that make it more convenient for Sensu plugins and other Sensu-adjacent applications to authenticate with the Sensu API.
Unlike [authentication tokens][2], API keys are persistent and do not need to be refreshed every 15 minutes.

Use the [APIKey API][1] to create, retrieve, and delete API keys.

## Authorization header format

Use the following header format to authenticate with API keys, replacing `API_KEY` with your API key value:

{{< highlight curl >}}
Authorization: Key API_KEY
{{< /highlight >}}

This is different from the authentication token, which uses the `Authorization: Bearer` header format.

When you specify an API key in a request, the system resolves it to an authentication token and continues through the regular authentication process.

_**NOTE**: The API key resource is not compatible with [`sensuctl create`][3]._

## API key resource structure

{{< language-toggle >}}

{{< highlight yml >}}
type: APIKey
api_version: core/v2
metadata:
  name: 19803eb8-36a6-4203-a225-28ec4e9f4444
spec:
  created_at: 1570732266
  username: admin
{{< /highlight >}}

{{< highlight json >}}
{
  "type": "APIKey",
  "api_version": "core/v2",
  "metadata" : {
    "name": "19803eb8-36a6-4203-a225-28ec4e9f4444"
  },
  "spec": {
    "created_at": 1570732266,
    "username": "admin"    
  }
}
{{< /highlight >}}

{{< /language-toggle >}}

## API key specification

### Top-level attributes

type         | 
-------------|------
description  | Top-level attribute that specifies the resource type. API keys should always be type `APIKey`.
required     | true
type         | String
example      | {{< highlight shell >}}"type": "APIKey"{{< /highlight >}}

api_version  | 
-------------|------
description  | Top-level attribute that specifies the Sensu API group and version. The `api_version` should always be `core/v2`.
required     | true
type         | String
example      | {{< highlight shell >}}"api_version": "core/v2"{{< /highlight >}}

metadata     | 
-------------|------
description  | Top-level collection of metadata about the API key, including the `name`. The `metadata` map is always at the top level of the API key definition. This means that in `wrapped-json` and `yaml` formats, the `metadata` scope occurs outside the `spec` scope.
required     | true
type         | Map of key-value pairs
example      | {{< highlight shell >}}"metadata": {
  "name": "19803eb8-36a6-4203-a225-28ec4e9f4444"
}{{< /highlight >}}

spec         | 
-------------|------
description  | Top-level map that includes the API key's [spec attributes][4].
required     | true
type         | Map of key-value pairs
example      | {{< highlight shell >}}"spec": {
    "created_at": 1570732266,
    "username": "admin"
  }
{{< /highlight >}}

### Metadata attributes

| name       |      |
-------------|------
description  | Unique string used to identify the API key. Sensu randomly generates a UUID for the `name` value &mdash; users cannot provide a name for an API key.
required     | true
type         | String
example      | {{< highlight shell >}}"name": "19803eb8-36a6-4203-a225-28ec4e9f4444"{{< /highlight >}}

### Spec attributes

| username   |     |
-------------|------
description  | User associated with the API key.
required     | true
type         | Array
example      | {{< highlight shell >}}"username": "admin"{{< /highlight >}}

| created_at |      |
-------------|------
description  | Time at which the API key was created. Unix timestamp that is automatically generated when the API key is created.
required     | true
type         | Integer
example      | {{< highlight shell >}}"created_at": 1234567890{{< /highlight >}}

## Examples

{{< language-toggle >}}

{{< highlight yml >}}
type: APIKey
api_version: core/v2
metadata:
  name: 19803eb8-36a6-4203-a225-28ec4e9f4444
spec:
  created_at: 1570732266
  username: admin
{{< /highlight >}}

{{< highlight json >}}
{
  "type": "APIKey",
  "api_version": "core/v2",
  "metadata": {
    "name": "19803eb8-36a6-4203-a225-28ec4e9f4444"
  },
  "spec": {
    "created_at": 1570732266,
    "username": "admin"
  }
}
{{< /highlight >}}
{{< /language-toggle >}}

[1]: ../../api/apikeys/
[2]: ../../api/auth/#the-authtoken-api-endpoint
[3]: ../../sensuctl/reference/#create-resources
[4]: #spec-attributes
